{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 49,
  "lineage": "ecbd9913-d577-3fbf-36d5-d4678d5d9fd5",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:951869164162:loadbalancer/app/secure-n-tier-infra-dev-alb/7cc83f0b85a86ca5",
            "arn_suffix": "app/secure-n-tier-infra-dev-alb/7cc83f0b85a86ca5",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "secure-n-tier-infra-dev-alb-1780413793.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:951869164162:loadbalancer/app/secure-n-tier-infra-dev-alb/7cc83f0b85a86ca5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "secure-n-tier-infra-dev-alb",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-094e999939b68660e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06cf96f8db52385ee"
              },
              {
                "subnet_id": "subnet-0c7a3dc8acda26573"
              }
            ],
            "subnets": [
              "subnet-06cf96f8db52385ee",
              "subnet-0c7a3dc8acda26573"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-alb",
              "Project": "secure-n-tier-infra"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-alb",
              "Project": "secure-n-tier-infra"
            },
            "vpc_id": "vpc-0a1303a7a5cc157c9",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:951869164162:loadbalancer/app/secure-n-tier-infra-dev-alb/7cc83f0b85a86ca5"
          },
          "dependencies": [
            "module.security_group.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:951869164162:listener/app/secure-n-tier-infra-dev-alb/7cc83f0b85a86ca5/26b3615dea917e40",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:951869164162:targetgroup/secure-n-tier-infra-dev-tg/e923e09344ec71aa",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:951869164162:listener/app/secure-n-tier-infra-dev-alb/7cc83f0b85a86ca5/26b3615dea917e40",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:951869164162:loadbalancer/app/secure-n-tier-infra-dev-alb/7cc83f0b85a86ca5",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "secure-n-tier-infra"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:951869164162:listener/app/secure-n-tier-infra-dev-alb/7cc83f0b85a86ca5/26b3615dea917e40"
          },
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.security_group.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:951869164162:targetgroup/secure-n-tier-infra-dev-tg/e923e09344ec71aa",
            "arn_suffix": "targetgroup/secure-n-tier-infra-dev-tg/e923e09344ec71aa",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:951869164162:targetgroup/secure-n-tier-infra-dev-tg/e923e09344ec71aa",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:951869164162:loadbalancer/app/secure-n-tier-infra-dev-alb/7cc83f0b85a86ca5"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "secure-n-tier-infra-dev-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-tg",
              "Project": "secure-n-tier-infra"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-tg",
              "Project": "secure-n-tier-infra"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a1303a7a5cc157c9"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:951869164162:targetgroup/secure-n-tier-infra-dev-tg/e923e09344ec71aa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06a83a7a581c729a9",
            "arn": "arn:aws:ec2:ap-south-1:951869164162:instance/i-0b85d042c8be6f9d6",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "secure-n-tier-infra-dev-jenkins-profile",
            "id": "i-0b85d042c8be6f9d6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d2d2516cab7795e6"
              }
            ],
            "primary_network_interface_id": "eni-0d2d2516cab7795e6",
            "private_dns": "ip-10-0-1-60.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.60",
            "public_dns": "ec2-13-207-51-34.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.207.51.34",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "dev",
                  "ManagedBy": "Terraform",
                  "Project": "secure-n-tier-infra"
                },
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "Terraform",
                  "Project": "secure-n-tier-infra"
                },
                "throughput": 125,
                "volume_id": "vol-00ea4116c808b4e49",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06cf96f8db52385ee",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-jenkins",
              "Project": "secure-n-tier-infra",
              "Role": "CI-CD",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-jenkins",
              "Project": "secure-n-tier-infra",
              "Role": "CI-CD",
              "Tier": "Public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a7a4a0df0cde23be"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "951869164162",
            "id": "i-0b85d042c8be6f9d6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_ami.amazon_linux_2023",
            "module.ec2.aws_iam_instance_profile.jenkins",
            "module.ec2.aws_iam_role.jenkins",
            "module.security_group.aws_security_group.jenkins",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06a83a7a581c729a9",
            "arn": "arn:aws:ec2:ap-south-1:951869164162:instance/i-020c0cff3cfcd166e",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-020c0cff3cfcd166e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-00dd7fb3cb64a1771"
              }
            ],
            "primary_network_interface_id": "eni-00dd7fb3cb64a1771",
            "private_dns": "ip-10-0-22-202.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.22.202",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "dev",
                  "ManagedBy": "Terraform",
                  "Project": "secure-n-tier-infra"
                },
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "Terraform",
                  "Project": "secure-n-tier-infra"
                },
                "throughput": 125,
                "volume_id": "vol-05404c898e1267055",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-060b4cd8fe5a73737",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-mongodb-2",
              "Project": "secure-n-tier-infra",
              "Tier": "Database"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-mongodb-2",
              "Project": "secure-n-tier-infra",
              "Tier": "Database"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b84b5ba1665d87f4"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "951869164162",
            "id": "i-020c0cff3cfcd166e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_ami.amazon_linux_2023",
            "module.security_group.aws_security_group.alb",
            "module.security_group.aws_security_group.app",
            "module.security_group.aws_security_group.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951869164162:security-group/sg-094e999939b68660e",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094e999939b68660e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "secure-n-tier-infra-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "951869164162",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-alb-sg",
              "Project": "secure-n-tier-infra"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-alb-sg",
              "Project": "secure-n-tier-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1303a7a5cc157c9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "951869164162",
            "id": "sg-094e999939b68660e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951869164162:security-group/sg-0ccb331ba8ddd0527",
            "description": "Security group for private application servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ccb331ba8ddd0527",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-094e999939b68660e"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "secure-n-tier-infra-dev-app-sg",
            "name_prefix": "",
            "owner_id": "951869164162",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-app-sg",
              "Project": "secure-n-tier-infra"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-app-sg",
              "Project": "secure-n-tier-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1303a7a5cc157c9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "951869164162",
            "id": "sg-0ccb331ba8ddd0527",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951869164162:security-group/sg-0b84b5ba1665d87f4",
            "description": "Security group for Amazon DocumentDB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b84b5ba1665d87f4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ccb331ba8ddd0527"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "secure-n-tier-infra-dev-database-sg",
            "name_prefix": "",
            "owner_id": "951869164162",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-database-sg",
              "Project": "secure-n-tier-infra"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-database-sg",
              "Project": "secure-n-tier-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1303a7a5cc157c9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "951869164162",
            "id": "sg-0b84b5ba1665d87f4",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.alb",
            "module.security_group.aws_security_group.app",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951869164162:security-group/sg-0a7a4a0df0cde23be",
            "description": "Security group for Jenkins server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7a4a0df0cde23be",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "secure-n-tier-infra-dev-jenkins-sg",
            "name_prefix": "",
            "owner_id": "951869164162",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-jenkins-sg",
              "Project": "secure-n-tier-infra"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-jenkins-sg",
              "Project": "secure-n-tier-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1303a7a5cc157c9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "951869164162",
            "id": "sg-0a7a4a0df0cde23be",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0caa801c92ea1a3fd",
            "arn": "arn:aws:ec2:ap-south-1:951869164162:elastic-ip/eipalloc-0caa801c92ea1a3fd",
            "association_id": "eipassoc-08bcafa36fcb8c5dc",
            "domain": "vpc",
            "id": "eipalloc-0caa801c92ea1a3fd",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-01e8e2cea9e258d49",
            "private_dns": "ip-10-0-1-173.ap-south-1.compute.internal",
            "private_ip": "10.0.1.173",
            "public_dns": "ec2-13-232-128-199.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.128.199",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-nat-eip",
              "Project": "secure-n-tier-infra"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-nat-eip",
              "Project": "secure-n-tier-infra"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "951869164162",
            "id": "eipalloc-0caa801c92ea1a3fd",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951869164162:internet-gateway/igw-081d1631a9bdb92c4",
            "id": "igw-081d1631a9bdb92c4",
            "owner_id": "951869164162",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-igw",
              "Project": "secure-n-tier-infra"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-igw",
              "Project": "secure-n-tier-infra"
            },
            "vpc_id": "vpc-0a1303a7a5cc157c9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "951869164162",
            "id": "igw-081d1631a9bdb92c4",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0caa801c92ea1a3fd",
            "association_id": "eipassoc-08bcafa36fcb8c5dc",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0cfa26b6242559bfd",
            "network_interface_id": "eni-01e8e2cea9e258d49",
            "private_ip": "10.0.1.173",
            "public_ip": "13.232.128.199",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06cf96f8db52385ee",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-nat",
              "Project": "secure-n-tier-infra"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-nat",
              "Project": "secure-n-tier-infra"
            },
            "vpc_id": "vpc-0a1303a7a5cc157c9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "951869164162",
            "id": "nat-0cfa26b6242559bfd",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951869164162:route-table/rtb-0dcec5f3134f4d206",
            "id": "rtb-0dcec5f3134f4d206",
            "owner_id": "951869164162",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-database-rt",
              "Project": "secure-n-tier-infra"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-database-rt",
              "Project": "secure-n-tier-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1303a7a5cc157c9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "951869164162",
            "id": "rtb-0dcec5f3134f4d206",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951869164162:route-table/rtb-03c7f4c9976f50926",
            "id": "rtb-03c7f4c9976f50926",
            "owner_id": "951869164162",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cfa26b6242559bfd",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-private-app-rt",
              "Project": "secure-n-tier-infra"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-private-app-rt",
              "Project": "secure-n-tier-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1303a7a5cc157c9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "951869164162",
            "id": "rtb-03c7f4c9976f50926",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951869164162:route-table/rtb-0ee6e01c4ff54e012",
            "id": "rtb-0ee6e01c4ff54e012",
            "owner_id": "951869164162",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-081d1631a9bdb92c4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-public-rt",
              "Project": "secure-n-tier-infra"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-public-rt",
              "Project": "secure-n-tier-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1303a7a5cc157c9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "951869164162",
            "id": "rtb-0ee6e01c4ff54e012",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4330a5dd840c208",
            "region": "ap-south-1",
            "route_table_id": "rtb-0dcec5f3134f4d206",
            "subnet_id": "subnet-048d04cd43e361069"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "951869164162",
            "id": "rtbassoc-0a4330a5dd840c208",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02277544c2ccaa0de",
            "region": "ap-south-1",
            "route_table_id": "rtb-0dcec5f3134f4d206",
            "subnet_id": "subnet-060b4cd8fe5a73737"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "951869164162",
            "id": "rtbassoc-02277544c2ccaa0de",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d634bcc31a4afd26",
            "region": "ap-south-1",
            "route_table_id": "rtb-03c7f4c9976f50926",
            "subnet_id": "subnet-0fc709c805d16c6e8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "951869164162",
            "id": "rtbassoc-0d634bcc31a4afd26",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private_app",
            "module.vpc.aws_subnet.private_app",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc15a9832b965e94",
            "region": "ap-south-1",
            "route_table_id": "rtb-03c7f4c9976f50926",
            "subnet_id": "subnet-0a467d8d8d0c397bc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "951869164162",
            "id": "rtbassoc-0fc15a9832b965e94",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private_app",
            "module.vpc.aws_subnet.private_app",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1768fdd2f0dbc52",
            "region": "ap-south-1",
            "route_table_id": "rtb-0ee6e01c4ff54e012",
            "subnet_id": "subnet-06cf96f8db52385ee"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "951869164162",
            "id": "rtbassoc-0d1768fdd2f0dbc52",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ebef3ac8a9551cc",
            "region": "ap-south-1",
            "route_table_id": "rtb-0ee6e01c4ff54e012",
            "subnet_id": "subnet-0c7a3dc8acda26573"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "951869164162",
            "id": "rtbassoc-07ebef3ac8a9551cc",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951869164162:subnet/subnet-048d04cd43e361069",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048d04cd43e361069",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "951869164162",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-database-ap-south-1a",
              "Project": "secure-n-tier-infra",
              "Tier": "Database"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-database-ap-south-1a",
              "Project": "secure-n-tier-infra",
              "Tier": "Database"
            },
            "vpc_id": "vpc-0a1303a7a5cc157c9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "951869164162",
            "id": "subnet-048d04cd43e361069",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951869164162:subnet/subnet-060b4cd8fe5a73737",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060b4cd8fe5a73737",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "951869164162",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-database-ap-south-1b",
              "Project": "secure-n-tier-infra",
              "Tier": "Database"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-database-ap-south-1b",
              "Project": "secure-n-tier-infra",
              "Tier": "Database"
            },
            "vpc_id": "vpc-0a1303a7a5cc157c9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "951869164162",
            "id": "subnet-060b4cd8fe5a73737",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951869164162:subnet/subnet-0fc709c805d16c6e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc709c805d16c6e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "951869164162",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-private-app-ap-south-1a",
              "Project": "secure-n-tier-infra",
              "Tier": "Private-App"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-private-app-ap-south-1a",
              "Project": "secure-n-tier-infra",
              "Tier": "Private-App"
            },
            "vpc_id": "vpc-0a1303a7a5cc157c9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "951869164162",
            "id": "subnet-0fc709c805d16c6e8",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951869164162:subnet/subnet-0a467d8d8d0c397bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a467d8d8d0c397bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "951869164162",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-private-app-ap-south-1b",
              "Project": "secure-n-tier-infra",
              "Tier": "Private-App"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-private-app-ap-south-1b",
              "Project": "secure-n-tier-infra",
              "Tier": "Private-App"
            },
            "vpc_id": "vpc-0a1303a7a5cc157c9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "951869164162",
            "id": "subnet-0a467d8d8d0c397bc",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951869164162:subnet/subnet-06cf96f8db52385ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06cf96f8db52385ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "951869164162",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-public-ap-south-1a",
              "Project": "secure-n-tier-infra",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-public-ap-south-1a",
              "Project": "secure-n-tier-infra",
              "Tier": "Public"
            },
            "vpc_id": "vpc-0a1303a7a5cc157c9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "951869164162",
            "id": "subnet-06cf96f8db52385ee",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951869164162:subnet/subnet-0c7a3dc8acda26573",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7a3dc8acda26573",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "951869164162",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-public-ap-south-1b",
              "Project": "secure-n-tier-infra",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-public-ap-south-1b",
              "Project": "secure-n-tier-infra",
              "Tier": "Public"
            },
            "vpc_id": "vpc-0a1303a7a5cc157c9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "951869164162",
            "id": "subnet-0c7a3dc8acda26573",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951869164162:vpc/vpc-0a1303a7a5cc157c9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02e5f9d176a595142",
            "default_route_table_id": "rtb-050bc769d90f80382",
            "default_security_group_id": "sg-0a97bfb321ef78254",
            "dhcp_options_id": "dopt-07b43ae953a011fd4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a1303a7a5cc157c9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-050bc769d90f80382",
            "owner_id": "951869164162",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-vpc",
              "Project": "secure-n-tier-infra"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-n-tier-infra-dev-vpc",
              "Project": "secure-n-tier-infra"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "951869164162",
            "id": "vpc-0a1303a7a5cc157c9",
            "region": "ap-south-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}